fix: cards sticking to sides on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@
   /* outline: 2px solid red !important; */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --card-background-orange: hsl(31, 77%, 52%);
   --card-background-dark-cyan: hsl(184, 100%, 22%);
@@ -30,10 +34,11 @@ body {
 main {
   padding: 3rem 0;
   display: flex;
+  max-width: 1440px;
+  width: 90%;
   background-color: var(--primary-gray);
   flex-direction: column;
   margin: auto;
-  max-width: 375px;
 }
 
 /* ============================ */
@@ -139,8 +144,6 @@ footer {
 @media screen and (min-width: 1240px) {
   main {
     flex-direction: row;
-    max-width: 1440px;
-    width: 90%;
     padding: 6rem;
   }
 
